<resources>
    <string name="app_name">Intercibus</string>
    <string name="username">Username</string>
    <string name="nom">Nom</string>
    <string name="cognom_1">Cognom 1</string>
    <string name="cognom_2">Cognom 2</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="tel_fon">Telèfon</string>
    <string name="registra_t">Registra\'t</string>
    <string name="NomUsuari">Nom usuari</string>
    <string name="Pass">Contrasenya</string>
    <string name="IniciSessio">Inici sessió</string>
    <string name="IniciGoogle">Iniciar sessió amb Google</string>
    <string name="PreguntaCompte">Encara no tens compte?</string>
    <string name="Registrar">Registrar-me</string>
    <string name="nif">Nif</string>
    <string name="password2">Repeteix password</string>
    <string name="extras">Serveis</string>
    <string name="descripci">Descripció:</string>
    <string name="afegeix_espai">Afegeix el teu espai:</string>
    <string name="title_activity_pagina_principal">PaginaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ajuda">Ajuda</string>
    <string name="perfil">Perfil</string>
    <string name="inici">Inici</string>
    <string name="cercaPers">Cerca personalitzada</string>
    <string name="gestioReser">Gestionar reserva</string>
    <string name="contacte">Contacte</string>
    <string name="tancarSessio">Tancar sessió</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="direccio">Direcció:</string>
    <string name="area">Àrea:</string>
    <string name="carregaFoto">Carregar imatge de portada:</string>
    <string name="preuBaseEspai">Preu base espai:</string>
    <string name="ExtresComentari">"(Si disposes de piscina, barbacoa o altre servei)"</string>
    <string name="eliminar">Eliminar</string>
    <string name="cercaServeis">Cercar Serveis</string>
    <string name="servei">Servei</string>
    <string name="textRecerca">Troba el teu lloc ideal!</string>
    <string name="tipusServeis">Barbacoa, piscina, catering...</string>
    <string name="filtrar">Filtrar per serveis:</string>
    <string name="provincia">Província:</string>
    <string name="butCerca">Cerca</string>
    <string name="serveis">Serveis:</string>
    <string name="preu">Preu:</string>
    <string name="preu_total">Preu total:</string>
    <string name="btCercarServei">Cercar Servei</string>
    <string name="btBuscarEspai">Buscar Espai</string>
    <string name="btCrearEspai">Crear Espai</string>
    <string name="btDiaIniciReserva">Escull el dia d\'entrada</string>
    <string name="ubicacio">Ubicació:</string>
    <string name="preu_base">Preu base:</string>
    <string name="reservar">Reservar</string>
    <string name="open">Obrir</string>
    <string name="close">Tancar</string>
    <string name="reserves">Reserves pròpies</string>
    <string name="seleccionar_data">Seleccionar data</string>
    <string name="reset">Reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etDiaSortidaReserva">Escull el dia de sortida</string>
    <string name="btDiaReservaContinuar">Prem \'Seleccionar Data\' per continuar</string>
    <string name="data_entrada">Data d\'entrada</string>
    <string name="data_sortida">Data de sortida</string>
    <string name="seleccionar_serveis">Escull els serveis que vols reservar:</string>
    <string name="nom_espai">Nom espai</string>
    <string name="carregar">Carregar</string>
    <string name="preu_servei">Preu</string>
    <string name="afegeix">Afegeix</string>
    <string name="cercarEspais">Cercar Espais</string>
    <string name="particular">Particular</string>
    <string name="empresa">Empresa</string>
    <string name="que_sou">Què sou?</string>
    <string name="detallls">Detalls</string>
    <string name="info">Informació</string>
    <string name="reservesPropies">Reserves pròpies</string>
    <string name="reservesSol">Reserves rebudes</string>
    <string name="veureInfoUsuariKO">No s\'han pogut carregar les dades de contacte.</string>
    <string name="infoUsuari">Informació de l\'usuari:</string>
    <string name="noServeis">Has de seleccionar un servei com a mínim.</string>
    <string name="PasswordNoIguals">Error! Les claus d\'accès no són iguals</string>
    <string name="omplirTotsCamps">Error! Has d\'omplir tots els camps.</string>
    <string name="noEspais">No s\'han trobat espais.</string>
    <string name="usuariOK">Usuari creat correctament.</string>
    <string name="usuariKO">Error! No s\'ha pogut crear l\'usuari. Torna-ho a intentar més tard.</string>
    <string name="carregarEspaiKO">No s\'ha pogut carregar l\'espai seleccionat.</string>
    <string name="hola">Hola</string>
    <string name="benvingutIntercibus">Benvingut/da a InterCibus!</string>
    <string name="omplirCampsObligatoris">Has d\'omplit tots els camps obligatoris.</string>
    <string name="introduitFotografia">Has d\'introduir una fotografia del teu espai.</string>
    <string name="dosPuntosNoPermitido">El caracter : no està permés.</string>
    <string name="barraNoPermitido">El caracter / no està permés.</string>
    <string name="espaiCreatOK">Espai creat correctament.</string>
    <string name="espaiCreatKO">Error! No s\'ha pogut crear l\'espai. Torna-ho a intentar més tard.</string>
    <string name="nomPreuObligatori">Has d\'omplir els camps \'Nom\' i \'Preu\' del servei.</string>
    <string name="dataIniciAnteriorAvui">Error! La data d\'inici no pot ser anterior al dia d\'avui.</string>
    <string name="diaJaReservat">Error! Aquest dia ja està reservat.</string>
    <string name="reservaKO">Error! No s\'ha pogut reservar l\'espai.</string>
    <string name="iniciSessioKO">Usuari o clau d\'accés incorrectes.</string>
    <string name="sessioAutoKO">No s\'ha pogut iniciar sessió automàticament.</string>
    <string name="reservaOK">Reserva introduïda correctament.</string>
    <string name="reservesDiesEscollits">Error! Hi han reserves durant els dies escollits.</string>
    <string name="carregarDiesReservesKO">Error! No s\'han pogut carregar els dies disponibles per reservar.</string>
    <string name="noReserves">No s\'han trobat reserves.</string>
    <string name="reservaDiaNoSeleccionar">Error! Aquest dia ja no es pot seleccionar.</string>
    <string name="mesInfo">+ Info</string>
    <string name="entrada">Entrada:</string>
    <string name="sortida">Sortida:</string>
    <string name="noInfo">No s\'ha pogut carregar la informació.</string>
    <string name="serveisReservats">Serveis Reservats:</string>
    <string name="dataSortidaAnteriorInici">Error! La data i hora de sortida ha de ser posteriors a les d\'entrada.</string>
</resources>