<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ausias.intercibus.Registre">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="128dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/que_sou"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_particular"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boto_marro"
            android:onClick="registrarParticular"
            android:text="@string/particular"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_empresa"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/boto_marro"
            android:onClick="registrarEmpresa"
            android:text="@string/empresa"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
